--- a/GameEngineTK/GameEngineTK.vcxproj
+++ b/GameEngineTK/GameEngineTK.vcxproj
@@ -194,6 +194,7 @@
   <ItemGroup>
     <MeshContentTask Include="Assets\ground1m.FBX" />
     <MeshContentTask Include="Assets\skydome.FBX" />
+    <MeshContentTask Include="Assets\sphere.FBX" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
