--- a/GameEngineTK/GameEngineTK.vcxproj
+++ b/GameEngineTK/GameEngineTK.vcxproj
@@ -163,12 +163,14 @@
   <ItemGroup>
     <ClInclude Include="DebugCamera.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="KeyboardUtil.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="StepTimer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DebugCamera.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="KeyboardUtil.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -196,6 +198,7 @@
     <MeshContentTask Include="Assets\ground200m.FBX" />
     <MeshContentTask Include="Assets\skydome.FBX" />
     <MeshContentTask Include="Assets\sphere.FBX" />
+    <MeshContentTask Include="Assets\tank.FBX" />
     <MeshContentTask Include="Assets\teapot.FBX" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
