--- a/GameEngineTK/GameEngineTK.vcxproj.filters
+++ b/GameEngineTK/GameEngineTK.vcxproj.filters
@@ -12,6 +12,7 @@
     <ClInclude Include="StepTimer.h" />
     <ClInclude Include="DebugCamera.h" />
     <ClInclude Include="KeyboardUtil.h" />
+    <ClInclude Include="Camera.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
@@ -19,6 +20,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="DebugCamera.cpp" />
     <ClCompile Include="KeyboardUtil.cpp" />
+    <ClCompile Include="Camera.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="resource.rc" />
