第１２回授業内容 Obj3dクラスの完成 天球と地面と自機をObj3d型で実装

--- a/GameEngineTK/GameEngineTK.vcxproj.filters
+++ b/GameEngineTK/GameEngineTK.vcxproj.filters
@@ -58,5 +58,8 @@
     <MeshContentTask Include="Assets\tank.FBX">
       <Filter>Assets</Filter>
     </MeshContentTask>
+    <MeshContentTask Include="Assets\battery.FBX">
+      <Filter>Assets</Filter>
+    </MeshContentTask>
   </ItemGroup>
 </Project>
