第１３回授業内容 自分オリジナルのロボットの作成

--- a/GameEngineTK/GameEngineTK.vcxproj.filters
+++ b/GameEngineTK/GameEngineTK.vcxproj.filters
@@ -61,5 +61,17 @@
     <MeshContentTask Include="Assets\battery.FBX">
       <Filter>Assets</Filter>
     </MeshContentTask>
+    <MeshContentTask Include="Assets\star.FBX">
+      <Filter>Assets</Filter>
+    </MeshContentTask>
+    <MeshContentTask Include="Assets\shield.FBX">
+      <Filter>Assets</Filter>
+    </MeshContentTask>
+    <MeshContentTask Include="Assets\bullet.FBX">
+      <Filter>Assets</Filter>
+    </MeshContentTask>
+    <MeshContentTask Include="Assets\drill.FBX">
+      <Filter>Assets</Filter>
+    </MeshContentTask>
   </ItemGroup>
 </Project>
