--- a/GameEngineTK/GameEngineTK.vcxproj
+++ b/GameEngineTK/GameEngineTK.vcxproj
@@ -201,10 +201,14 @@
   </ItemGroup>
   <ItemGroup>
     <MeshContentTask Include="Assets\battery.FBX" />
+    <MeshContentTask Include="Assets\bullet.FBX" />
+    <MeshContentTask Include="Assets\drill.FBX" />
     <MeshContentTask Include="Assets\ground1m.FBX" />
     <MeshContentTask Include="Assets\ground200m.FBX" />
+    <MeshContentTask Include="Assets\shield.FBX" />
     <MeshContentTask Include="Assets\skydome.FBX" />
     <MeshContentTask Include="Assets\sphere.FBX" />
+    <MeshContentTask Include="Assets\star.FBX" />
     <MeshContentTask Include="Assets\tank.FBX" />
     <MeshContentTask Include="Assets\teapot.FBX" />
   </ItemGroup>
