第２０回授業内容 敵と当たったらエフェクトが出る 敵を全て倒したらクリアしたことが分かる

--- a/GameEngineTK/GameEngineTK.vcxproj
+++ b/GameEngineTK/GameEngineTK.vcxproj
@@ -169,6 +169,8 @@
     <ClInclude Include="FollowCamera.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="KeyboardUtil.h" />
+    <ClInclude Include="LandShape.h" />
+    <ClInclude Include="LandShapeData.h" />
     <ClInclude Include="ModelEffect.h" />
     <ClInclude Include="Obj3d.h" />
     <ClInclude Include="pch.h" />
@@ -184,6 +186,8 @@
     <ClCompile Include="FollowCamera.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="KeyboardUtil.cpp" />
+    <ClCompile Include="LandShape.cpp" />
+    <ClCompile Include="LandShapeData.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="ModelEffect.cpp" />
     <ClCompile Include="Obj3d.cpp" />
@@ -213,6 +217,8 @@
     <MeshContentTask Include="Assets\battery.FBX" />
     <MeshContentTask Include="Assets\bullet.FBX" />
     <MeshContentTask Include="Assets\drill.FBX" />
+    <MeshContentTask Include="Assets\effect.FBX" />
+    <MeshContentTask Include="Assets\gameclear.FBX" />
     <MeshContentTask Include="Assets\ground1m.FBX" />
     <MeshContentTask Include="Assets\ground200m.FBX" />
     <MeshContentTask Include="Assets\shield.FBX" />
